# 3d-models

./: .gitignore  AGENTS.md  Makefile  README.md  preview.py  pyproject.toml
docs/: stl_validation.md
scripts/: validate_dutch_blitz_parametric.py  validate_stl_match.py
src/print_models/: __init__.py  catalog.py  cli.py  dovetail.py  dxf.py  filenames.py
src/print_models/assets/logos/: dutch_blitz_title_from_124738.dxf  five_crowns_lid_logo_from_source_section.dxf  monopoly_deal_lid_logo_from_printables_697154.dxf
src/print_models/models/: __init__.py  calibration_cube.py  dutch_blitz_card_storage_box.py  dutch_blitz_card_storage_box_parametric.py  dutch_blitz_storage_box.py  five_crowns_deck_box.py  five_crowns_storage_box.py  gridfinity_box.py  gridfinity_exact_fit_baseplate.py  gridfinity_shims.py  monopoly_deal_storage_box.py  phone_stand.py  template.py
tests/: __init__.py  test_card_storage_boxes.py  test_dovetail.py  test_filenames.py  test_gridfinity_box.py
