[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "print-models"
version = "0.1.0"
description = "A CadQuery starter repo for parametric 3D-printable models."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "cadquery>=2.5,<3",
]

[project.scripts]
generate-model = "print_models.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/print_models"]

[tool.hatch.build.targets.wheel.force-include]
"src/print_models/assets/fonts/Fraunces144pt-Regular.ttf" = "print_models/assets/fonts/Fraunces144pt-Regular.ttf"
"src/print_models/assets/fonts/Fraunces144pt-Bold.ttf" = "print_models/assets/fonts/Fraunces144pt-Bold.ttf"
"src/print_models/assets/logos/dutch_blitz_title_from_124738.dxf" = "print_models/assets/logos/dutch_blitz_title_from_124738.dxf"
"src/print_models/assets/logos/five_crowns_lid_logo_from_source_section.dxf" = "print_models/assets/logos/five_crowns_lid_logo_from_source_section.dxf"

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
